<resources>
    <string name="app_name">JobScheduler</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="people">People</string>
    <string name="tasks">Tasks</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="title_task">Title Task</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="due_date">Due Date</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search...</string>

    <string name="dateformate">dd/MM/yyyy</string>
    <string name="hour_minutes">HH:mm</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="task">Task</string>
    <string name="select_date">Select Date</string>

    <string-array name="spinnerAssigned">
        <item>Fathul</item>
        <item>Sir_Ilham</item>
    </string-array>

</resources>
