<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMyTaskActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/Green"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/title"
        style="@style/title_text"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Edit Task"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_white"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp">
            <TextView
                style="@style/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/title_task"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/stroke_black"
                android:hint="@string/title_task"
                android:paddingLeft="15dp" />

            <TextView
                style="@style/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/deskripsi"
                android:textSize="17sp" />


            <EditText
                android:id="@+id/edtDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/stroke_black"
                android:hint="@string/deskripsi"
                android:paddingLeft="15dp" />

            <TextView
                android:id="@+id/textView5"
                style="@style/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/select_date"
                android:textSize="17sp" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_marginTop="-10dp"
                android:id="@+id/datePicker"
                android:layout_gravity="center"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"/>
            <TextView
                style="@style/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Time"
                android:textSize="17sp" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="139dp"
                android:layout_gravity="center"
                android:layout_marginTop="-10dp"
                android:timePickerMode="spinner" />

        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/btn_red"
        android:text="Delete Task"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btnEdit"/>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_green"
        android:text="Edit Task"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_gray"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>